--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "isomorphic-unfetch": "^3.0.0",
+    "mongoose": "^5.8.0",
     "next": "9.1.5",
+    "nprogress": "^0.2.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "semantic-ui-react": "^0.88.2"
