--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nprogress": "^0.2.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "shortid": "^2.2.15"
   }
 }
