--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   app:
     container_name: app
     environment:
-      MONGO_DOCKER_URI: mongodb://mongo:27017
+      - MONGO_DOCKER_URI=mongodb://mongo:27017
     ports:
       - "3000:3000"
     command: npm run dev
