--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "cloudinary": "^1.18.1",
     "isomorphic-unfetch": "^3.0.0",
     "mongoose": "^5.8.0",
     "next": "9.1.5",
