--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "cloudinary": "^1.18.1",
     "isomorphic-unfetch": "^3.0.0",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.0",
     "next": "9.1.5",
     "nprogress": "^0.2.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "semantic-ui-react": "^0.88.2",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "validator": "^12.1.0"
   }
 }
