--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.0",
     "next": "9.1.5",
+    "nookies": "^2.0.8",
     "nprogress": "^0.2.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
